@@ -1,0 +1,7 @@
+import MyDocument
+import Note
+
+from PyObjCTools import AppHelper
+
+if __name__ == "__main__":
+    AppHelper.runEventLoop()
